fix: page transition overflowing

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -2,28 +2,32 @@
 @forward 'animations';
 
 :root {
-    --fw-normal: 600;
-    --fw-light: 500;
-    --bg-primary: #000;
-    --color-primary: #fff;
-    --bg-secondary: #fff;
-    --fsz-normal: 1rem;
-    --fsz-big: 2.125rem;
-    --ff: 'Inter';
-    --btn-hover: rgb(51, 51, 51);
-    --color-secondary: #999;
-    --border-color: #333;
-    --transition-y: 8px;
+  --fw-normal: 600;
+  --fw-light: 500;
+  --bg-primary: #000;
+  --color-primary: #fff;
+  --bg-secondary: #fff;
+  --fsz-normal: 1rem;
+  --fsz-big: 2.125rem;
+  --ff: 'Inter';
+  --btn-hover: rgb(51, 51, 51);
+  --color-secondary: #999;
+  --border-color: #333;
+  --transition-y: 8px;
 
-    @media (max-width: 768px) {
-      --fsz-big: 1.5rem;
-    }
-  } 
+  @media (max-width: 768px) {
+    --fsz-big: 1.5rem;
+  }
+}
 
 body {
   background: var(--bg-primary);
   font-weight: var(--fw-normal);
   font-size: var(--fsz-normal);
+
+  @media screen and (min-width: 600px) {
+    overflow-y: hidden !important;
+  }
 }
 
 * {
@@ -39,4 +43,4 @@ body {
 canvas {
   max-width: 100% !important;
   max-height: 100% !important;
-} 
+}
